Add paper to digital prototype (#9)
* Add TODO settings

* Add transfer process journey

* Style figures and move upload to a forms elements scss partial

* Add DLS parts

* Update content and tidy page templates

* Fix input logic

* Link "change" actions in summary list

* Add full width class to template to allow the use of full width elements in pages

* Update header to bring inline with dls

* Update page parts

* Update heading

* Remove duplicate header

* Remove caption from decleration page

* Amend top margin of checkbox label for standalone checkbox items on additional proficiencies pages

* Update routs to handle multiple entry points for differnt fra
mework and tidy up page data and content.

* tidy up routes

* Add dynamic confirmation page

* Pull over files from learning conversations branch

* Add tel page blue variable

* Update variable name

* Update scss paths and add _progress.scss

* Remove learning conversation files after after use

* Add mock 'live' supervisor nav bar

* Update admin header urls

* Update date content to remove extraniouse info and add TODOs to pages

* Add Admin journey and include previously missed exander scss"

* Update progress cards and root final page

* Update progress pips to mirror terminology set out in summary

* Update admin index and card styling to fix component alignment and page layout

* Update pages and note future improvments

* Update resposnove layout and design for supervisor journie

* Add global css back to main.scss

* Scope learner journie under folder

* Update page content and include breadcrumbs and back link in journey

* Update todo and decelration page to reference iv therapy passport

* Add better contextual ques to admin journey

* Add notes

* Page updates

* Add files missed in merge

* Update upload, task index and additional proficeincie page content

--- a/app/assets/sass/_global.scss
+++ b/app/assets/sass/_global.scss
@@ -1,5 +1,59 @@
+.nhsuk-width-container {
+  max-width: 1144px;
+
+  @media only screen and (max-width: 1208px) and (min-width: 960px) {
+    margin-left: 32px;
+    margin-right: 32px;
+  }
+
+  &--full-width {
+    margin-left: auto !important;
+    margin-right: auto !important;
+  }
+}
+
+.nhsuk-header__navigation {
+  max-width: initial;
+}
+
 .content-group {
   @include reading-width();
 
   margin-bottom: nhsuk-spacing(6);
+
+  // Overrides the standard p bottom margin before a list to show a closer typographic relationship to the previous content
+  p + ul,
+  p + ol {
+    margin-top: -#{nhsuk-spacing(3)};
+  }
+
+  // .nhsuk-button + .nhsuk-button {
+  //   margin-left: nhsuk-spacing(4);
+  // }
+}
+
+img {
+  max-width: 100%;
+  // margin-bottom: nhsuk-spacing(4);
+}
+
+.proto-figure {
+  margin: 0;
+  margin-bottom: nhsuk-spacing(4);
+  padding: 0;
+
+  &__figcaption {
+    @extend %nhsuk-body-s;
+
+    margin: 0;
+    color: $nhsuk-secondary-text-color;
+  }
+
+  * + * {
+    margin: 0;
+  }
+}
+
+.proto-checkboxes__label {
+  padding: 4px 12px 4px;
 }
