--- a/app/views/index.html
+++ b/app/views/index.html
@@ -54,15 +54,6 @@
           </li>
           <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
             {{ card({
-              "href": "/proficiencies",
-              "clickable": "true",
-              "heading": "Nursing, learner proficiencies",
-              "headingClasses": "nhsuk-heading-s",
-              "description": ""
-            }) }}
-          </li>
-          <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
-            {{ card({
               "href": "/login",
               "clickable": "true",
               "heading": "Login journey",
@@ -72,18 +63,38 @@
           </li>
           <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
             {{ card({
-              "href": "/register-delegates",
+              "href": "/proficiencies",
               "clickable": "true",
-              "heading": "Register users",
+              "heading": "Nursing, learner proficiencies",
+              "headingClasses": "nhsuk-heading-s",
+              "description": ""
+            }) }}
+          </li>
+          {# /paper-transfer/have-you-completed-a-paper-assessment #}
+          <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
+            {{ card({
+              "href": "/paper-transfer/learner/_dls-parts",
+              "clickable": "true",
+              "heading": "Paper transfer journey - Learner",
+              "headingClasses": "nhsuk-heading-s",
+              "description": ""
+            }) }}
+          </li>
+          {# prototypes/paper-transfer-process/admin/supervisor-dashboard/index.html #}
+          <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
+            {{ card({
+              "href": "/paper-transfer/admin",
+              "clickable": "true",
+              "heading": "Paper transfer journey - Admin",
               "headingClasses": "nhsuk-heading-s",
               "description": ""
             }) }}
           </li>
           <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
             {{ card({
-              "href": "/prototypes/certificates",
+              "href": "/register-delegates",
               "clickable": "true",
-              "heading": "Certificate",
+              "heading": "Register users",
               "headingClasses": "nhsuk-heading-s",
               "description": ""
             }) }}
@@ -112,6 +123,15 @@
               "href": "/elements",
               "clickable": "true",
               "heading": "Elements",
+              "headingClasses": "nhsuk-heading-s",
+              "description": ""
+            }) }}
+          </li>
+          <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
+            {{ card({
+              "href": "/prototypes/certificates",
+              "clickable": "true",
+              "heading": "Certificate",
               "headingClasses": "nhsuk-heading-s",
               "description": ""
             }) }}
