--- a/app/assets/sass/components/dls-copy/_layout.scss
+++ b/app/assets/sass/components/dls-copy/_layout.scss
@@ -329,19 +329,19 @@
 //   }
 // }
 
-.nhsuk-width-container,
-.nhsuk-header__navigation {
-  // max-width: 1144px !important;
-  // padding-left: $nhsuk-gutter !important;
-  // padding-right: $nhsuk-gutter !important;
-  
-  max-width: 1144px;
-  
-  @media only screen and (max-width: 1208px) and (min-width: 960px) {
-    margin-left: 32px;
-    margin-right: 32px;
-  }
-}
+// .nhsuk-width-container,
+// .nhsuk-header__navigation {
+//   // max-width: 1144px !important;
+//   // padding-left: $nhsuk-gutter !important;
+//   // padding-right: $nhsuk-gutter !important;
+
+//   max-width: 1144px;
+
+//   @media only screen and (max-width: 1208px) and (min-width: 960px) {
+//     margin-left: 32px;
+//     margin-right: 32px;
+//   }
+// }
 
 // .nhsuk-width-container {
 //   margin: auto !important;
@@ -359,18 +359,50 @@
 //   }
 // }
 
-// .dls-alert-banner {
-//   background-color: $color_nhsuk-dark-pink;
-//   color: #FFFFFF;
-//   a {
-//     color: #FFFFFF;
+.dls-alert-banner {
+  background-color: $color_nhsuk-dark-pink;
+  color: #FFFFFF;
+  a {
+    color: #FFFFFF;
 
-//     &:hover {
-//       color: #FFFFFF;
-//     }
+    &:hover {
+      color: #FFFFFF;
+    }
 
-//     &:visited {
-//       color: #FFFFFF;
-//     }
-//   }
-// }
+    &:visited {
+      color: #FFFFFF;
+    }
+  }
+}
+
+.feedback-tag {
+  align-items: center;
+  background-color: $color_nhsuk-blue;
+  color: $color_nhsuk-white;
+  display: inline-flex;
+  font-family: "Frutiger W01", Arial, sans-serif;
+  font-size: 19px;
+  font-weight: 600;
+  height: 31.9844px;
+  justify-content: center;
+  line-height: 27.9999px;
+  margin: 0 10px 0 0;
+  padding: 0px 8px;
+  position: relative;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.feedback-wrapper {
+  padding: 8px 0;
+  line-height: 2;
+}
+
+.feedback-bar {
+  background-color: $color_nhsuk-grey-5;
+  border-bottom: 1px solid $color_nhsuk-grey-4;
+}
+
+.nhsuk-width-container--feedback {
+  margin-bottom: 0;
+}
