--- a/app/views/prototypes/paper-transfer-process/admin/review-and-submit/index.html
+++ b/app/views/prototypes/paper-transfer-process/admin/review-and-submit/index.html
@@ -12,18 +12,16 @@
     <div class="nhsuk-grid-row">
       <div class="nhsuk-grid-column-full">
         {{ backLink({
-          href: "/paper-transfer/admin/before-you-start",
+          href: "/paper-transfer/admin/what-is-a-paper-to-digital-sign-off",
           text: "Go back"
         }) }}
 
-        <h1>Check information is correct and send for review</h1>
+        <h1>Summary of James King's paper assessment information</h1>
 
         <div class="content-group">
-          <p>Please find below a summary of Allan Kings’s paper assessment information for their IV Therapy passport.</p>
-          <p>Review this information on this page and check it is correct to the best of your knowledge:</p>
+          <p>As an educator or supervisor, your role in the paper-to-digital transfer process is to ensure the accuracy and reliability of the data being migrated. It is essential to carefully review the information to confirm that it matches the original paper assessment.</p>
         </div>
 
-        <h2>Summary</h2>
         <dl class="nhsuk-summary-list nhsuk-summary-list--no-border proto-summary-list--fixed-width-titles nhsuk-">
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">Name of educator or supervisor</dt>
@@ -69,7 +67,7 @@
 
           </div>
           <div class="nhsuk-summary-list__row">
-            <dt class="nhsuk-summary-list__key">Upload signed off paper document</dt>
+            <dt class="nhsuk-summary-list__key">Signed off page from paper document</dt>
             <dd class="nhsuk-summary-list__value">
               <img src="{{ data['declarationDocUpload'] }}" alt="">
               <div class="nhsuk-u-margin-bottom-2"><img src="/images/paper-process/paper-mockup.png" alt=""></div>
@@ -78,7 +76,7 @@
           </div>
           <div class="nhsuk-summary-list__row">
             <dt class="nhsuk-summary-list__key">Declaration</dt>
-            <dd class="nhsuk-summary-list__value">Signed <span id="current-date"></span></dd>
+            <dd class="nhsuk-summary-list__value">Signed off practice and transferable skills on 27-11-2024</dd>
           </div>
         </dl>
 
