--- a/app/views/prototypes/paper-transfer-process/admin/what-is-a-paper-to-digital-sign-off/index.html
+++ b/app/views/prototypes/paper-transfer-process/admin/what-is-a-paper-to-digital-sign-off/index.html
@@ -18,15 +18,19 @@
         <!-- paper-transfer/admin/supervisor-dashboard -->
 
         <div class="content-group">
-          <h1>Paper assessment transfer</h1>
+          <h1>Paper to digital transfer</h1>
 
-          <h2>Before you start</h2>
-          <p>You should:</p>
+          <p class="nhsuk-u-font-weight-bold">You should:</p>
           <ul>
-            <li>Review the paper assessment with the learner</li>
-            <li>Identify any additional proficiencies required by the role</li>
-            <li>And, understand their strength, weaknesses and identify any actions or areas for improvement</li>
+            <li>check paper assessment proficiencies have been achieved</li>
+            <li>review the information to ensure it is correct</li>
           </ul>
+          <p class="nhsuk-u-font-weight-bold">Your staff:</p>
+          <ul>
+            <li>must have completed the paper assessment to the current standard</li>
+            <li>may still need to complete additional proficiencies required for their roll.</li>
+          </ul>
+          <p>Completing this does not finalise their assessment; they will need to be signed off separately once any additional proficiencies have been completed.</p>
         </div>
 
         <div class="content-group">
@@ -38,7 +42,6 @@
       </div>
     </div>
   </div>
-
 {% endblock %}
 
 {% block outerContent %}
