Add my staff redesign page

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -109,7 +109,6 @@
             }) }}
           </li>
         </ul>
-
         <hr class="nhsuk-u-margin-top-2 nhsuk-u-margin-bottom-6">
       </div>
     </div>
@@ -132,6 +131,15 @@
               "href": "/prototypes/certificates",
               "clickable": "true",
               "heading": "Certificate",
+              "headingClasses": "nhsuk-heading-s",
+              "description": ""
+            }) }}
+          </li>
+          <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
+            {{ card({
+              "href": "/prototypes/supervisor-dashboard",
+              "clickable": "true",
+              "heading": "Supervisor dashboard",
               "headingClasses": "nhsuk-heading-s",
               "description": ""
             }) }}
