Update conteent on confirmation page

--- a/app/views/prototypes/paper-transfer-process/admin/confirmation/rejected.html
+++ b/app/views/prototypes/paper-transfer-process/admin/confirmation/rejected.html
@@ -14,12 +14,14 @@
         <h1>Paper assessment transfer to digital review completed</h1>
 
         <div class="content-group">
-          <p>Request to transfer paper assessment to dls as a digital record of their achievement has been rejected.</p>
+          <p>Request to transfer paper assessment to DLS as a digital record of their achievement has been rejected.</p>
 
-          <h2>What happens next</h2>
-          <p>The feedback provided has been emailed to the James King.</p>
+          <h2>What happens next?</h2>
+          <p>The feedback has been emailed to James King.</p>
 
           {{ card({
+            heading: "Feedback,
+            headingLevel: "3",
             descriptionHtml: data['rejectionFeedback']
           }) }}
 
