--- a/app/views/prototypes/paper-transfer-process/admin/confirmation/approved.html
+++ b/app/views/prototypes/paper-transfer-process/admin/confirmation/approved.html
@@ -14,15 +14,15 @@
         <h1>Paper assessment transfer to digital review completed</h1>
 
         <div class="content-group">
-          <p>You have reviewed and accepted James kings request to transfer thier paper assessment to dls as a digital record of their achievement.</p>
-          <p>Competencies reviewed as part of this request have been marked as complete and they now have access to the same assessment information digitally on DLS</p>
+          <p>You have reviewed and accepted James kings request to transfer their paper assessment to DLS as a digital record of their achievement.</p>
+          <p>Proficiencies reviewed as part of this request have been marked as complete and they now have access to the same assessment information digitally on DLS.</p>
 
-          <h2>What happens next</h2>
+          <h2>What happens next?</h2>
           <ul>
-            <li>James King will recive an email confirming their paper assessment has been reviewed and accepted</li>
-            <li>Any <a href="#">additional proficiencies</a> required for their role will need to be added</li>
+            <li>James King will receive an email confirming their paper assessment has been reviewed and accepted.</li>
+            <li>Any additional proficiencies required for their role will need to be added.</li>
             <li>A final sign-off is still required to confirm that the learner is competent to practice in their role.</li>
-            <li>If the learner doesn't need to include any additional proficiencies they can seek final sign off strait away</li>
+            <li>If the learner doesn't need to include any additional proficiencies, they can seek final sign-off strait away. </li>
           </ul>
         </div>
 
