Add missing closing "

--- a/app/views/prototypes/paper-transfer-process/admin/confirmation/rejected.html
+++ b/app/views/prototypes/paper-transfer-process/admin/confirmation/rejected.html
@@ -20,7 +20,7 @@
           <p>The feedback has been emailed to James King.</p>
 
           {{ card({
-            heading: "Feedback,
+            heading: "Feedback",
             headingLevel: "3",
             descriptionHtml: data['rejectionFeedback']
           }) }}
