--- a/app/assets/sass/components/nhsuk-overrides/_task-list.scss
+++ b/app/assets/sass/components/nhsuk-overrides/_task-list.scss
@@ -1,10 +1,3 @@
-// NOTE - This si the full NHSUK component css and the overrides will need extracting after updating the font-end tool kit
-
-
-
-
-
-
 /**
  * Original SASS taken from GOV.UK Design System
  * https://github.com/alphagov/govuk-frontend/blob/main/packages/govuk-frontend/src/govuk/components/task-list/_index.scss
@@ -28,15 +21,19 @@ $nhsuk-task-list-hover-color: darken($color_nhsuk-grey-5, 6%);
 // The position is set to 'relative' so than an absolutely-positioned transparent element box
 // can be added within the link so that the whole row can be clickable.
 .nhsuk-task-list__item {
-  display: flex;
-  align-items: start;
-  flex-wrap: wrap;
+  display: block;
   position: relative;
   width: 100%;
   margin-bottom: 0;
   padding-top: calc(nhsuk-spacing(2) + 4px);
   padding-bottom: calc(nhsuk-spacing(2) + 4px);
   border-bottom: 1px solid $nhsuk-border-color;
+
+  @include mq($from: tablet) {
+    display: flex;
+    align-items: start;
+    flex-wrap: wrap;
+  }
 }
 
 .nhsuk-task-list__item:first-child {
@@ -51,18 +48,25 @@ $nhsuk-task-list-hover-color: darken($color_nhsuk-grey-5, 6%);
 }
 
 .nhsuk-task-list__name-and-hint {
-  flex: 1 1 500px; // Note replace flex-basis with breakpoint
   display: block;
-  // min-width: 400px;
+  width: 100%;
   margin: 1px 0;
   color: $nhsuk-text-color;
+
+  @include mq($from: tablet) {
+    flex: 1;
+  }
 }
 
 .nhsuk-task-list__status {
   display: block;
-  padding-left: nhsuk-spacing(2);
-  text-align: right;
+  padding: nhsuk-spacing(2) 0 0;
   color: $nhsuk-text-color;
+
+  @include mq($from: tablet) {
+    padding: 0 0 nhsuk-spacing(2) 0;
+    text-align: right;
+  }
 }
 
 // This replicates some of the styling and spacing of tags so that these non-tag
@@ -71,10 +75,13 @@ $nhsuk-task-list-hover-color: darken($color_nhsuk-grey-5, 6%);
 .nhsuk-task-list__status--completed,
 .nhsuk-task-list__status--cannot-start-yet {
   @include nhsuk-font($size: 16, $weight: regular, $line-height: 1);
-  padding-bottom: nhsuk-spacing(1);
-  padding-left: nhsuk-spacing(2);
-  padding-top: calc(nhsuk-spacing(1) + 2px); // to match the spacing on tags
+
+  padding: calc(nhsuk-spacing(1) + 2px) 0 nhsuk-spacing(1);
   text-decoration: none;
+
+  @include mq($from: tablet) {
+    padding-left: calc(nhsuk-spacing(1) + 2px) 0 nhsuk-spacing(1) nhsuk-spacing(2);
+  }
 }
 
 .nhsuk-task-list__status--cannot-start-yet {
