Update start assessment button label access rout in learner journey

--- a/app/views/prototypes/paper-transfer-process/learner/_dls-parts/about-iv-therapy/index.html
+++ b/app/views/prototypes/paper-transfer-process/learner/_dls-parts/about-iv-therapy/index.html
@@ -112,7 +112,7 @@
       </div>
     </div>
   </div>
-  <a class="nhsuk-button trigger-loader" href="/paper-transfer/learner/have-you-completed-a-paper-assessment">Setup assessment</a>
+  <a class="nhsuk-button trigger-loader" href="/paper-transfer/learner/have-you-completed-a-paper-assessment">Start assessment</a>
 </div>
 
 {% endblock %}
