--- a/app/views/prototypes/paper-transfer-process/learner/_dls-parts/about-steps-1/index.html
+++ b/app/views/prototypes/paper-transfer-process/learner/_dls-parts/about-steps-1/index.html
@@ -41,7 +41,7 @@
     </div>
   </div>
 
-  <a class="nhsuk-button" href="/paper-transfer/learner/have-you-completed-a-paper-assessment">Setup assessment</a>
+  <a class="nhsuk-button" href="/paper-transfer/learner/have-you-completed-a-paper-assessment">Start assessment</a>
 </div>
 {% endblock %}
 
