--- a/app/views/prototypes/paper-transfer-process/learner/index.html
+++ b/app/views/prototypes/paper-transfer-process/learner/index.html
@@ -1,5 +1,5 @@
 {% extends 'layouts/layout.html' %}
-<!-- {% from 'components/task-list/macro.njk' import taskList %} -->
+{% from 'components/task-list/macro.njk' import taskList %}
 
 {% block header %}
   {% include "includes/dls-header-iv-therapy.html" %}
