Add paper process landing page and include learner rejection outcome"

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -70,22 +70,11 @@
               "description": ""
             }) }}
           </li>
-          {# /paper-transfer/have-you-completed-a-paper-assessment #}
           <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
             {{ card({
-              "href": "/paper-transfer/learner/_dls-parts",
+              "href": "/paper-transfer",
               "clickable": "true",
-              "heading": "Paper transfer journey - Learner",
-              "headingClasses": "nhsuk-heading-s",
-              "description": ""
-            }) }}
-          </li>
-          {# prototypes/paper-transfer-process/admin/supervisor-dashboard/index.html #}
-          <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
-            {{ card({
-              "href": "/paper-transfer/admin",
-              "clickable": "true",
-              "heading": "Paper transfer journey - Admin",
+              "heading": "Paper transfer process",
               "headingClasses": "nhsuk-heading-s",
               "description": ""
             }) }}
