Update title in admin rejection journey

--- a/app/views/prototypes/paper-transfer-process/admin/supervisor-dashboard/index.html
+++ b/app/views/prototypes/paper-transfer-process/admin/supervisor-dashboard/index.html
@@ -53,7 +53,7 @@
               <ul>
                 <li>
                   <a href="/paper-transfer/admin/what-is-a-paper-to-digital-sign-off" class="nhsuk-link--no-visited-state">
-                    Review and sign-off James King's Paper to digital transfer for their IV Therapy passport.
+                    Review and accept James King's Paper to digital transfer for their IV Therapy passport.
                   </a>
                   . Requested 06/10/2024
                 </li>
