Update learner content

--- a/app/views/prototypes/paper-transfer-process/admin/what-is-a-paper-to-digital-sign-off/index.html
+++ b/app/views/prototypes/paper-transfer-process/admin/what-is-a-paper-to-digital-sign-off/index.html
@@ -25,10 +25,10 @@
             <li>check paper assessment proficiencies have been achieved</li>
             <li>review the information to ensure it is correct</li>
           </ul>
-          <p class="nhsuk-u-font-weight-bold">Your staff:</p>
+          <p class="nhsuk-u-font-weight-bold">[Learner name]:</p>
           <ul>
             <li>must have completed the paper assessment to the current standard</li>
-            <li>may still need to complete additional proficiencies required for their roll.</li>
+            <li>may still need to complete additional proficiencies required for their role.</li>
           </ul>
           <p>Completing this does not finalise their assessment; they will need to be signed off separately once any additional proficiencies have been completed.</p>
         </div>
