--- a/app/views/prototypes/paper-transfer-process/learner-transfer-not-accepted/index.html
+++ b/app/views/prototypes/paper-transfer-process/learner-transfer-not-accepted/index.html
@@ -17,7 +17,7 @@
         text: "Go back to assessment option"
       }) }}
 
-      <h1>The transfer of your paper assessment has not been accepted</h1>
+      <h1>The transfer of your paper assessment has been rejected</h1>
 
       <div class="content-group">
 
@@ -97,8 +97,8 @@
             href: "/paper-transfer/learner/review-and-submit",
             status: {
               tag: {
-                text: "Complete",
-                classes: "nhsuk-tag--green"
+                text: "Incomplete",
+                classes: "nhsuk-tag--blue"
               }
             }
           }
