--- a/app/views/prototypes/paper-transfer-process/learner/upload/index.html
+++ b/app/views/prototypes/paper-transfer-process/learner/upload/index.html
@@ -75,7 +75,7 @@
 
           <div class="nhsuk-form-group">
             <label class="nhsuk-label nhsuk-u-margin-bottom-2" for="example">
-              As per figure 1
+              As per figure 1 (Maximum file size: 10mb)
             </label>
             <input class="nhsuk-input" id="declarationDocUpload" name="declarationDocUpload" type="file">
           </div>
