--- a/app/views/prototypes/paper-transfer-process/admin/confirmation/rejected.html
+++ b/app/views/prototypes/paper-transfer-process/admin/confirmation/rejected.html
@@ -11,13 +11,13 @@
   <div class="nhsuk-width-container">
     <div class="nhsuk-grid-row">
       <div class="nhsuk-grid-column-full">
-        <h1>Paper assessment transfer to digital review completed</h1>
+        <h1>Paper assessment transfer to digital review outcome</h1>
 
         <div class="content-group">
-          <p>Request to transfer paper assessment to DLS as a digital record of their achievement has been rejected.</p>
+          <p>[Learner name]s request to transfer paper assessment to DLS as a digital record of their achievement has been rejected.</p>
 
           <h2>What happens next?</h2>
-          <p>The feedback has been emailed to James King.</p>
+          <p>The feedback has been emailed to [Learner name].</p>
 
           {{ card({
             heading: "Feedback",
@@ -25,7 +25,7 @@
             descriptionHtml: data['rejectionFeedback']
           }) }}
 
-          <p>The email includes details of the rejection and outlines possible next steps.</p>
+          <p>The email will include the feedback you have provided and outlines possible next steps.</p>
         </div>
 
         <div class="content-group">
