Move includes under paper process prototype and update file paths

--- a/app/views/includes/dls-header-learner.html
+++ b/app/views/includes/dls-header-learner.html
@@ -4,7 +4,7 @@
 <header>
   <script>document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');</script>
 
-  <input type="hidden" id="CookieConsentPostPath" value="/v2/CookieConsent/ConfirmCookieConsent">
+  <input type="hidden" id="CookieConsentPostPath" value="https://www.dls.nhs.uk/v2/CookieConsent/ConfirmCookieConsent">
 
   <a class="nhsuk-skip-link" href="#maincontent">Skip to main content</a>
   {# <div class="dls-alert-banner">
