--- a/app/views/includes/dls-header-supervisor.html
+++ b/app/views/includes/dls-header-supervisor.html
@@ -2,7 +2,7 @@
 
 <header>
 
-  <input type="hidden" id="CookieConsentPostPath" value="/v2/CookieConsent/ConfirmCookieConsent">
+  <input type="hidden" id="CookieConsentPostPath" value="https://www.dls.nhs.uk/v2/CookieConsent/ConfirmCookieConsent">
 
 
   <a class="nhsuk-skip-link" href="#maincontent">Skip to main content</a>
