--- a/app/views/prototypes/login-journey/login/index.html
+++ b/app/views/prototypes/login-journey/login/index.html
@@ -35,7 +35,7 @@
 <div class="nhsuk-width-container" id="maincontentwrapper">
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-full">
-      <form action="/v2/Login" class="nhsuk-u-margin-bottom-8" method="post" novalidate="">
+      <form action="https://www.dls.nhs.uk/v2/Login" class="nhsuk-u-margin-bottom-8" method="post" novalidate="">
         <input id="ReturnUrl" name="ReturnUrl" type="hidden" value="">
 
         <div class="nhsuk-u-margin-bottom-8">
@@ -66,7 +66,7 @@
         <div class="nhsuk-inset-text nhsuk-u-margin-top-4 nhsuk-u-margin-bottom-4">
           <span class="nhsuk-u-visually-hidden">Information:</span>
 
-          <p>By logging in, I consent to my details being stored and processed in line with your <a href="https://www.hee.nhs.uk/about/privacy-notice" target="_blank">Privacy Policy</a> and agree to use the system according to <a href="/v2/LearningSolutions/Terms" target="_blank">Terms of Use</a></p>
+          <p>By logging in, I consent to my details being stored and processed in line with your <a href="https://www.hee.nhs.uk/about/privacy-notice" target="_blank">Privacy Policy</a> and agree to use the system according to <a href="https://www.dls.nhs.uk/v2/LearningSolutions/Terms" target="_blank">Terms of Use</a></p>
         </div>
         <a class="nhsuk-button" href="/admin-home" >Log in</a> <a class="nhsuk-button nhsuk-button--secondary nhsuk-u-margin-left-2" href="#ForgotPassword" role="button">Forgot password</a> <input name="__RequestVerificationToken" type="hidden" value="CfDJ8BnxON2_EAJJqD2p8EJgnrvDi8hssGfgxTl68DNPB9VvO6_AsTlTyUf7PRZ2YO5_eUonMd4mklL50qZYzrGTtodrDDB3ZvlhDyHFA_HVpIJDhh-JT9TCgafNG9VwfJETHbN46fnl3ZmTcy90ICSlOds"><input name="RememberMe" type="hidden" value="false">
       </form>
