--- a/app/views/prototypes/paper-transfer-process/admin/certificate/index.html
+++ b/app/views/prototypes/paper-transfer-process/admin/certificate/index.html
@@ -52,7 +52,7 @@
       <div class="nhsuk-width-container">
         <ol class="nhsuk-breadcrumb__list">
           <li class="nhsuk-breadcrumb__item">
-            <a class="nhsuk-breadcrumb__link trigger-loader" href="/v2/Supervisor/Staff/4878/ProfileAssessment/13429/Review">
+            <a class="nhsuk-breadcrumb__link trigger-loader" href="https://www.dls.nhs.uk/v2/Supervisor/Staff/4878/ProfileAssessment/13429/Review">
               &lt; Back
             </a>
           </li>
@@ -67,7 +67,7 @@
 
           <h2>IV Therapy Passport - Allan King </h2>
 
-          <a class="nhsuk-button " role="button" href="/v2/DownloadCertificate?candidateAssessmentId=13429">
+          <a class="nhsuk-button " role="button" href="https://www.dls.nhs.uk/v2/DownloadCertificate?candidateAssessmentId=13429">
             Download certificate
           </a>
         </div>
