--- a/app/views/prototypes/paper-transfer-process/admin/landing-page.html
+++ b/app/views/prototypes/paper-transfer-process/admin/landing-page.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/layout.html' %}
 
 {% block header %}
-{% include "includes/dls-header-admin.html" %}
+{% include "prototypes/paper-transfer-process/includes/dls-header-admin.html" %}
 {% endblock %}
 
 {% block beforeContent %}
@@ -13,7 +13,7 @@
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-full">
 
-          <link rel="stylesheet" href="/v2/css/home/welcome.css?v=logKVy0EZ5PzN279Qi-v2-n_DqHVFq_30ZGIDwqoSJw">
+          <link rel="stylesheet" href="https://www.dls.nhs.uk/v2/css/home/welcome.css?v=logKVy0EZ5PzN279Qi-v2-n_DqHVFq_30ZGIDwqoSJw">
 
           <div class="nhsuk-grid-row">
             <div class="nhsuk-grid-column-full">
