Update paper process content (#14)
* Add paper process landing page and include learner rejection outcome"

* Update title in admin rejection journey

* Remove extraniouse component imports

* Add else to confirmation root incase framework name isn't avalible

* Update learner content

* Move includes under paper process prototype and update file paths

--- a/app/views/prototypes/paper-transfer-process/learner/confirmation/index.html
+++ b/app/views/prototypes/paper-transfer-process/learner/confirmation/index.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/layout.html' %}
 
 {% block header %}
-  {% include "includes/dls-header-iv-therapy.html" %}
+  {% include "paper-transfer/includes/dls-header-iv-therapy.html" %}
 {% endblock %}
 
 {% block beforeContent %}
@@ -14,7 +14,7 @@
         <h1>Paper assessment submitted for review</h1>
 
         <div class="content-group">
-          <p>The information you have provided has been sent to your educator or supervisor for review.</p>
+          <p>The information you have provided has been sent to [supervisor name (email)] for review on DD/MM/YYYY.</p>
 
           <h2>What happens next</h2>
           <p>You will recive an email confirming your paper assessment information has been sent to your educator or supervisor.</p>
